# rcprg_kb

./: CMakeLists.txt  package.xml  setup.py
launch/: test_knowledge_base.launch.py
nodes/: test_knowledge_base
src/rcprg_kb/: embedded_image.py  image_operations.py  places_xml.py  transforms.py
