<?xml version="1.0"?>
<package format="3">
  <name>rcprg_kb</name>
  <version>0.0.0</version>
  <description>The rcprg_kb package</description>

  <maintainer email="5305@pw.edu.pl">Dawid Seredynski</maintainer>
  <license>TODO</license>

  <!-- Use ament_cmake as the build tool for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>pl_nouns</depend> 
  <depend>diagnostic_msgs</depend>
  <depend>play_motion_msgs</depend>
  <depend>std_srvs</depend>

  <export>
  </export>
</package>